# HDvis

./: .gitignore  .sconsign.dblite  ApplicationContext.cpp  ApplicationContext.h  CMakeCache.txt  CMakeLists.txt  ControlLoop.h  GeometryConverter.h  GuiListener.cpp  GuiListener.h  GuiListenerLinkDef.h  HDvis.h  HDvis_file  HDvis_fileh  HttpController.h  HttpServerController.h  JEventProcessor_EventReader.cc  JEventProcessor_EventReader.cpp  KeyboardControl.h  Main_filecs  README.md  RootLoop.h  RootLoopCommander.cpp  RootLoopCommander.h  SConscript  SConstruct  StringUtils.h  TGDMLWrite.cpp  TGDMLWrite.h  WaitingLogic.h  geometry.cpp  hd_vis.cc  hd_vis.cpp  hd_vis_geo.cpp  httplib.h  install.sh  main  main.cpp  main_file
EventReader/: .sconsign.dblite  BCAL.h  CDC.h  FCAL.h  FDC.h  JEventProcessor_EventReader.cc  JEventProcessor_EventReader.cpp  JEventProcessor_EventReader.h  JEventProcessor_EventReader.os  SC.h  TOF.h  Tracking.h
examples/: CMakeLists.txt  MultiView.h  TVSDReader.h  alice_vsd.cpp  arrow_embedded.cpp  box.cpp  boxset.cpp  calo_detail.cpp  calorimeters.cpp  pointset.cpp  track.cpp
js/: New Issue · yhirose_cpp-httplib.html  custom_node.html  event.html  event.json  event_hdds.html  geometry.json  gluex_1st.html  gluex_2nd.html  ha.gdml  ho.gdml  index.html  lathe.html  three.module.js  webgl_geometries.html
js/gdml/: Par02FullDetector.gdml
js/hdds/: ForwardDC_HDDS.xml  main_full_HDDS.xml
js/js/: GluexEventLoader.js  GluexGUI.js  GluexGeometryLoader.js  GluexHDDSLoader.js
js/js/controls/: OrbitControls.js
js/js/postprocessing/: OutlinePass.js
www/: .eslintrc.js  README.md  index.html  package-lock.json  package.json
www/src/: App.vue  main.js
www/src/components/: Hello.vue  Home.vue  ViewPort.vue
www/src/hdvis/: HDvis.js
www/src/router/: index.js
www/static/: main_full_HDDS.xml
